--- a/GRT/bin/AndroidManifest.xml
+++ b/GRT/bin/AndroidManifest.xml
@@ -7,7 +7,14 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="18" />
-
+    
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -22,6 +29,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.example.grt.DisplayMessageActivity"
+            android:label="@string/title_activity_display_message" >
+        </activity>
+        <meta-data
+    	android:name="com.google.android.gms.version"
+    	android:value="4.0" />
+        <meta-data
+    	android:name="com.google.android.maps.v2.API_KEY"
+    	android:value="AIzaSyDFGl1aQFRVHv56hY9TDf_6bvZMkRzXLFw"/>
     </application>
 
 </manifest>
