--- a/GRT/AndroidManifest.xml
+++ b/GRT/AndroidManifest.xml
@@ -7,14 +7,14 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="18" />
-    
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
-	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -33,12 +33,18 @@
             android:name="com.example.grt.DisplayMessageActivity"
             android:label="@string/title_activity_display_message" >
         </activity>
+
         <meta-data
-    	android:name="com.google.android.gms.version"
-    	android:value="4.0" />
+            android:name="com.google.android.gms.version"
+            android:value="4.0" />
         <meta-data
-    	android:name="com.google.android.maps.v2.API_KEY"
-    	android:value="AIzaSyDFGl1aQFRVHv56hY9TDf_6bvZMkRzXLFw"/>
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyDFGl1aQFRVHv56hY9TDf_6bvZMkRzXLFw" />
+
+        <activity
+            android:name="com.example.grt.DisplayMessage"
+            android:label="@string/title_activity_display_message" >
+        </activity>
     </application>
 
 </manifest>
